# Prompt-to-drawing-ur3e

./: .gitignore  CMakeLists.txt  README.md  checkpoint2.md  ha149_bonus.csv  package.xml  plugin_description.xml
csv_controller/config/: ur_controllers.yaml
csv_controller/csv_files/: ldihel_bonus.csv
csv_controller/launch/: ur3e_csv.launch.py
csv_controller/src/: csv_controller_parameters.yaml
csv_files/: ldihel.csv
drawing_pipeline/: CMakeLists.txt
drawing_pipeline/src/: eval_drawing_quality.py  eval_label_detection.py  generate_data.py  ik_solver.py  model.pt  primitives.py  run_from_prompt.py  templates.py  train.py
drawing_pipeline/src/data/test/: bike_0000.csv  bike_0000.json  bike_0001.csv  bike_0001.json  bike_0002.csv  bike_0002.json  bike_0003.csv  bike_0003.json  bike_0004.csv  bike_0004.json  bike_0005.csv  bike_0005.json  bike_0006.csv  bike_0006.json  bike_0007.csv  bike_0007.json  bike_0008.csv  bike_0008.json  bike_0009.csv  bike_0009.json  bike_0010.csv  bike_0010.json  bike_0011.csv  bike_0011.json  bike_0012.csv  bike_0012.json  bike_0013.csv  bike_0013.json  bike_0014.csv  bike_0014.json  bike_0015.csv  bike_0015.json  bike_0016.csv  bike_0016.json  bike_0017.csv  bike_0017.json  bike_0018.csv  bike_0018.json  bike_0019.csv  bike_0019.json  (+560 more)
drawing_pipeline/src/data/train/: bike_0000.csv  bike_0000.json  bike_0001.csv  bike_0001.json  bike_0002.csv  bike_0002.json  bike_0003.csv  bike_0003.json  bike_0004.csv  bike_0004.json  bike_0005.csv  bike_0005.json  bike_0006.csv  bike_0006.json  bike_0007.csv  bike_0007.json  (+3584 more)
drawing_pipeline/src/wandb/: latest-run
include/csv_controller/: csv_controller.hpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
py_joint_pub/py_joint_pub/: joint_publisher_csv.py
src/: csv_controller.cpp
(+890 files in other folders)
